kubernetes-master/wwwm-spring-be/v1-wwwm-spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwwm-spring-be-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wwwm-spring-be
  template:
    metadata:
      labels:
        app: wwwm-spring-be
    spec:
      # master 노드의 NoSchedule taint를 허용
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: wwwm-spring-be
        image: judemin/wwwm-spring-be:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "800m"
            memory: "400Mi"
          limits:
            cpu: "1"
            memory: "800Mi"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
