kubernetes-master/wwwm-spring-be/wwwm-spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wwwm-spring-be-service
spec:
  selector:
    app: wwwm-spring-be-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
